postgres/20-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: postgres
  labels:
    app: postgres
spec:
  type: ClusterIP
  ports:
    - name: pg
      port: 5432
      targetPort: 5432
      appProtocol: tcp
  selector:
    app: postgres
