postgres/25-service-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-hl
  namespace: postgres
  labels:
    app: postgres
spec:
  clusterIP: None
  ports:
    - name: pg
      port: 5432
      targetPort: 5432
      appProtocol: tcp
  selector:
    app: postgres
