postgres/41-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-db-from-apps
  namespace: postgres
spec:
  podSelector:
    matchLabels:
      app: postgres
  policyTypes: ["Ingress"]
  ingress:
    - from:
        # Example 1: allow any pod with this label in any ns
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              needs-postgres: "true"
      ports:
        - protocol: TCP
          port: 5432
  egress:
    - to:
        # Example 2: allow any pod with this label in any ns
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              needs-postgres: "true"
      ports:
        - protocol: TCP
          port: 5432
